kubernetes/applications/simple-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-service
  labels:
    app: simple-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-service
  template:
    metadata:
      labels:
        app: simple-service
    spec:
      containers:
      - name: simple-service
        image: acrsupplychaindemo.azurecr.io/simple-service@sha256:024983dc64099166a45a6cb2c82857947a9eff30c382a7ac92fed04da8d0e0d4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
